--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
-        "rpkamp/fancy-testdox-printer": "^0.1.1"
+        "rpkamp/fancy-testdox-printer": "^0.1.1",
+        "satooshi/php-coveralls": "^1.0"
     }
 }
