--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,29 @@ language:
 
 php:
   - '7.1'
+  - '7.2'
   - nightly
+
+matrix:
+  allow_failures:
+    - php: nightly
 
 before_script:
   - composer install
+  - wget https://github.com/infection/infection/releases/download/0.8.1/infection.phar
+  - wget https://github.com/infection/infection/releases/download/0.8.1/infection.phar.pubkey
+  - chmod +x infection.phar
 
 script:
+  - mkdir -p build/logs
   - vendor/bin/phpunit -c phpunit.xml --testdox
+  - ./infection.phar --min-msi=100 --min-covered-msi=100
+  - touch build/logs/infection-log.txt
+  - cat build/logs/infection-log.txt
 
 after_success:
-  - travis_retry php vendor/bin/coveralls
+  - travis_retry php vendor/bin/php-coveralls
+  - bash <(curl -s https://codecov.io/bash)
+
+notifications:
+  email: false
