--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Stratadox\\Sorting\\": ["src", "contracts"]
+            "Stratadox\\Sorting\\": "src"
         }
     },
     "autoload-dev": {
@@ -18,7 +18,8 @@
         }
     },
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "stratadox/sorting-contracts": "^0.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1",
