--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1",
-        "satooshi/php-coveralls": "^2.0"
+        "satooshi/php-coveralls": "^2.0",
+        "phpstan/phpstan": "^0.9.2"
     }
 }
