--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_script:
 script:
   - mkdir -p build/logs
   - vendor/bin/phpunit -c phpunit.xml --testdox
+  - vendor/bin/phpstan analyse src tests --level=7
   - ./infection.phar
   - touch build/logs/infection-log.txt
   - cat build/logs/infection-log.txt
