--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "stratadox/sorting-contracts": "^0.1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.1",
+        "phpunit/phpunit": ">=6",
         "satooshi/php-coveralls": "^2.0",
         "phpstan/phpstan": "^0.9.2"
     }
