--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
     },
     "require": {
         "php": ">=7.0",
-        "stratadox/sorting-contracts": "^0.2.1"
+        "stratadox/sorting-contracts": "^0.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1",
-        "satooshi/php-coveralls": "^2.0",
-        "phpstan/phpstan": "^0.9.2"
+        "phpstan/phpstan": "^0.9.2",
+        "php-coveralls/php-coveralls": "^2.2"
     }
 }
